Personal information & photo change
Changed personal information and added appropriate photos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/portrait.svg" alt="Portrait of Firstname Lastname" width="160">
+          <img class="w-100 rounded-circle my-3" src="images/photo3.png" alt="Portrait of Firstname Lastname" width="160">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
@@ -86,16 +86,15 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/tfaz.png" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Co-organising TFAŻ</h4>
+                  <h5>Sep. 2018 &ndash; Apr. 2019 </h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>A theatre festival held annually at XV General Upper Secondary School named after N. Żmichowska in Warsaw</li>
+                    <li>Responsibilities included finding funds for the event, managing finances and teamworking with other sections</li>
                   </ul>
                 </div>
               </li>
@@ -104,11 +103,15 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/english.png" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
+                  <h4>English Tutor</h4>
+                  <h5>October 2020 - present</h5>
+                    <ul class="biography-details list-unstyled">
+						<li> Part-time job as a freelance English tutor</li>
+						<li> Offering private online English lessons on all levels and Cambridge Exam preparatory classes</li>
+					</ul>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
               </li>
@@ -129,12 +132,12 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
-                  <h5>2018&nbsp;&ndash;&nbsp;now</h5>
+                  <h5>2020 –&nbsp;present</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Member of the Degree Program Committee&nbsp;</li>
+                    <li>Class Representative</li>
+                    <li>GPA 3.47 for year 2020/2021</li>
                   </ul>
                 </div>
               </li>
@@ -142,13 +145,13 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/logo1.jpg" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h4>XV Upper Secondary School named after N. Żmichowska</h4>
+                  <h5>2017-2020</h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Audiovisual media specialization</li>
+                    <li>Advanced Biology, Chemistry, English and Mathematics</li>
                   </ul>
                 </div>
               </li>
@@ -251,7 +254,7 @@
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Team player</li>
               <li class="skill-item">Microsoft Office Power User</li>
-              <li class="skill-item">Driving Licence</li>
+              <li class="skill-item">Adobe Creative Cloud</li>
             </ul>
           </section>
 
@@ -260,8 +263,8 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Cinematography, especially Damien Chazelle's work ("Whiplash" and "La La Land")</li>
+              <li class="skill-item">Theatre with a focus on contemporary musicals. Favourite pieces include "Dear Evan Hansen", "TickTick... Boom!", and "Everybody's Talking About Jamie"</li>
             </ul>
           </section>
 
