links, fonts and colors changed
changed linkes to social media, font style and size, and background colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- 
     <link rel="stylesheet" href="css/alternative.css">
      -->
-
+<link rel="stylesheet" href="https://use.typekit.net/ccd5yxy.css">
     <title>Firstname Lastname's Resumé</title>
   </head>
   <!-- End of the head -->
@@ -53,9 +53,9 @@
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
-        <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="fw-bolder">Maria Kubik</h1>
-          <h5 class="fst-italic tagline">Creative Business student</h5>
+        <div class="col-sm-8 col-md-9 col-lg-10 my-3 header-content">
+          <h1 class="fw-bolder myname">Maria Kubik</h1>
+          <h5 class="fst-italic tagline myname">Creative Business student</h5>
         </div>
       </header>
 
@@ -192,16 +192,12 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://github.com/lynxiee" target="_blank">
                   <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
                   GitHub Profile
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="tel:+31612345678" target="_blank">
-                  <img class="contact-icon" src="images/icons/phone.svg" alt="Mobile Phone">
-                  +31 6 12345678
-                </a>
               </li>
             </ul>
           </section>
