changed ż and font size

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
      -->
 <link rel="stylesheet" href="https://use.typekit.net/ccd5yxy.css">
     <title>Firstname Lastname's Resumé</title>
+<link rel="stylesheet" href="https://use.typekit.net/ccd5yxy.css">
   </head>
   <!-- End of the head -->
 
@@ -55,7 +56,7 @@
         -->
         <div class="col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder myname">Maria Kubik</h1>
-          <h5 class="fst-italic tagline myname">Creative Business student</h5>
+          <h5 class="tagline mylogline">Creative Business student</h5>
         </div>
       </header>
 
@@ -89,11 +90,11 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/tfaz.png" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Co-organising TFAŻ</h4>
+                  <h4>Co-organising TFAZ</h4>
                   <h5>Sep. 2018 &ndash; Apr. 2019 </h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>A theatre festival held annually at XV General Upper Secondary School named after N. Żmichowska in Warsaw</li>
+                    <li>A theatre festival held annually at XV General Upper Secondary School named after N. Zmichowska in Warsaw</li>
                     <li>Responsibilities included finding funds for the event, managing finances and teamworking with other sections</li>
                   </ul>
                 </div>
@@ -148,7 +149,7 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/logo1.jpg" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>XV Upper Secondary School named after N. Żmichowska</h4>
+                  <h4>XV Upper Secondary School named after N. Zmichowska</h4>
                   <h5>2017-2020</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Advanced Biology, Chemistry, English and Mathematics</li>
