title of the website
changed the title of the website

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/alternative.css">
      -->
 <link rel="stylesheet" href="https://use.typekit.net/ccd5yxy.css">
-    <title>Firstname Lastname's Resumé</title>
+    <title>Maria Kubik Resumé</title>
 <link rel="stylesheet" href="https://use.typekit.net/ccd5yxy.css">
   </head>
   <!-- End of the head -->
